cluster/apps/services/valheim/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: valheim
  namespace: services
  annotations:
    metallb.universe.tf/address-pool: default
  labels:
    app.kubernetes.io/name: valheim
    app.kubernetes.io/instance: valheim
spec:
  selector:
    app.kubernetes.io/name: valheim
    app.kubernetes.io/instance: valheim
  ports:
    # status
    - port: 80
      targetPort: 80
      nodePort: 80
      protocol: TCP
      name: http
    # steam
    - port: 2456
      targetPort: 2456
      nodePort: 2456
      protocol: UDP
      name: steam1
    - port: 2457
      targetPort: 2457
      nodePort: 2457
      protocol: UDP
      name: steam2
    - port: 2458
      targetPort: 2458
      nodePort: 2458
      protocol: UDP
      name: steam3
    # supervisor
    - port: 9001
      targetPort: 9001
      nodePort: 9001
      protocol: TCP
      name: supervisor
  type: LoadBalancer
  loadBalancerIP: 10.2.113.128
